[package]
name = "nftune_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
uuid = { version = "1.17.0", features = ["v4", "js", "serde", "rng-getrandom"] } 
getrandom = { version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["std"] }
js-sys = "0.3"